Initial commit, delvis kopi fra api
