# app/main/api/perioder/PerioderRequest.kt
@@ -1,0 +1,9 @@
+package api.perioder
+
+import java.time.LocalDate
+
+data class PerioderRequest(
+    val personidentifikator: String,
+    val fraOgMedDato: LocalDate,
+    val tilOgMedDato: LocalDate
+)
