# app/main/openapi.yaml
@@ -2,86 +2,33 @@ openapi: "3.0.0"
 info:
   title: AAP-api
   description: |-
-    AAP-API tilbyr AAP informasjon til eksterne konsumenter som enten har hjemmel til å hente 
-    AAP informasjon eller et samtykke fra bruker. Konsumenter må logge seg inn med token fra 
-    Maskinporten (alle konsumenter) og et Samtykke-token (konsumenter som ikke har hjemmel).
+    AAP-INTER-API tilbyr et internt API for henting av AAP-data
     
-    Linker til autentiseringsløsninger
-    - [Maskinporten](https://www.digdir.no/felleslosninger/maskinporten/869)
-    - [Samtykke](https://www.altinndigital.no/produkter/samtykke/)
+    Bruker azure til autentisering
   contact:
     name: Richard Borge
-    url: https://github.com/navikt/aap-api
+    url: https://github.com/navikt/aap-api-intern
     email: richard.borge@nav.no
   version: 1.0.0
   license:
     name: MIT
     url: https://opensource.org/license/mit/
 tags:
-  - name: afp
-    description: AFP (avtalefestet pensjon)
-  - name: fellesordningen
-    description: Fellesordningen for AFP (afp.no)
-  - name: afpoffentlig
-    description: AFP i offentlig sektor
+  - name: perioder
+    description: Henting av perioder
 servers:
-  - url: https://aap-api.ekstern.dev.nav.no
+  - url: https://aap-api.intern.dev.nav.no
     description: Test server
 paths:
   /afp/fellesordningen:
     post:
       summary: Hent perioder med AAP
       tags:
-        - fellesordningen
-        - afp
-      description: |-
-        Henter perioder med vedtak for en person innen gitte datointerval. 
-
-        Scope: `nav:aap:afpprivat.read`
-      security:
-        - maskinporten: [ ]
-      parameters:
-        - in: header
-          name: x-callid
-          description: En UUID konsumenten sender inn som brukes til videre logging og feilsøking.
-          schema:
-            type: string
-            format: uuid
-          required: true
-      requestBody:
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/PeriodeRequest'
-      responses:
-        '200':
-          description: OK
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/PeriodeResponse'
-        '400':
-          description: Feil i request
-        '401':
-          description: Mangler / feil maskinporten token eller samtykke-token
-        '403':
-          description: Feil scope i maskinporten token
-        '404':
-          description: Manglende URL / Person ikke funnet
-        '500':
-          description: Feil på tjeneste, meld fra og send med call-id
-  /afp/offentlig:
-    post:
-      summary: Hent perioder med AAP
-      tags:
-        - afpoffentlig
-        - afp
+        - perioder
       description: |-
         Henter perioder med vedtak for en person innen gitte datointerval.
-        
-        Scope: `nav:aap:afpoffentlig.read`
       security:
-        - maskinporten: [ ]
+        - azure: [ ]
       parameters:
         - in: header
           name: x-callid
@@ -154,7 +101,7 @@ components:
           description: Slutt-dato for ønsket uttak av AAP-perioder
           example: 2021-01-01
   securitySchemes:
-    maskinporten:
+    azure:
       type: http
       scheme: bearer
       bearerFormat: JWT
